--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+Erbeilo3D Built_in RP
+Invector-3rdPersonController_LITE
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
