增加字幕跟引導人員

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Erbeilo3D Built_in RP
 Invector-3rdPersonController_LITE
 Oculus
 XR
+unity-chan!
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
