--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Erbeilo3D Built_in RP
 Oculus
 XR
 Oriental Structure Pack
-Panoramic
+/Assets/Resources/Panoramic
 
 
 # MemoryCaptures can get excessive in size.
